<resources>
    <string name="app_name">StuddyBuddy</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_activity_sbforum">SBForum</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Register">Register</string>
    <string name="Email">E-mail</string>
    <string name="Name">Name</string>
    <string name="Profile"> Profile</string>
    <string name="LocationSettings"> Location Settings</string>
    <string name="Preferences">Prefrences</string>
    <string name="LogOut">Log-out</string>
    <string name="Versionnumber">StuddyBuddy V1.0</string>
    <string name="title_activity_sb__forum">SB_Forum</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sb__calendar">SB_Calendar</string>
    <string name="title_activity_sb__review">SB_Review</string>
    <string name="title_activity_sb__forumstate2">SB_Forumstate2</string>
    <string name="title_activity_sbforum_search">SBForumSearch</string>
    <string name="Posttitle">Post title</string>
    <string name = "posttext"> Post Text</string>
</resources>
