<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uiPrimary"
    tools:context="com.example.studdybuddy.studdybuddy.SBSettings">

    <ImageButton
        android:id="@+id/exitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:contentDescription="exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/button4"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="44dp"
        android:text="@string/LogOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="49dp"
        android:text="@string/Preferences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="39dp"
        android:text="@string/LocationSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="54dp"
        android:text="@string/Profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="196dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/Versionnumber"
        android:textColor="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />


</android.support.constraint.ConstraintLayout>
