<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uiPrimary"
    tools:context="com.example.studdybuddy.studdybuddy.SBRegister">

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="4dp"
        android:contentDescription="exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <EditText
        android:id="@+id/Regname"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regusername"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Regname" />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regusername" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regpassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="if you want to register using these social media "
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail" />
</android.support.constraint.ConstraintLayout>
